added styling for toggled navbar

--- a/app/assets/sass/custom.scss
+++ b/app/assets/sass/custom.scss
@@ -1,18 +1,26 @@
 $primary-color: #ffb036;
-$font-color: #ffffff;
+$secondary-color: #ffffff;
 
 .navbar-default {
 	background-color: $primary-color;
 
 	.navbar-brand {
-		color: $font-color;
+		color: $secondary-color;
 	}
 
 	.navbar-nav {
 		li {
 			a {
-				color: $font-color;
+				color: $secondary-color;
 			}
+		}
+	}
+
+	.navbar-toggle {
+		border-color: $secondary-color;
+
+		.icon-bar {
+			background-color: $secondary-color;
 		}
 	}
 }
