--- a/app/assets/css/custom.css
+++ b/app/assets/css/custom.css
@@ -4,3 +4,7 @@
     color: #ffffff; }
   .navbar-default .navbar-nav li a {
     color: #ffffff; }
+  .navbar-default .navbar-toggle {
+    border-color: #ffffff; }
+    .navbar-default .navbar-toggle .icon-bar {
+      background-color: #ffffff; }
