added sidenav component and styled it

--- a/app/assets/css/custom.css
+++ b/app/assets/css/custom.css
@@ -1,3 +1,22 @@
+#wrapper {
+  padding-left: 250px;
+  transition: all 0.4s ease 0s; }
+
+#sidebar-wrapper {
+  margin-left: -250px;
+  left: 250px;
+  width: 250px;
+  background: #e5e5e5;
+  position: fixed;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 1000;
+  transition: all 0.4s ease 0s; }
+
+#page-content-wrapper {
+  margin-top: 50px;
+  width: 100%; }
+
 .navbar-default {
   background-color: #ffb036; }
   .navbar-default .navbar-brand {
@@ -8,3 +27,34 @@
     border-color: #ffffff; }
     .navbar-default .navbar-toggle .icon-bar {
       background-color: #ffffff; }
+
+.sidebar-nav {
+  position: absolute;
+  top: 0;
+  width: 250px;
+  list-style: none;
+  margin: 0;
+  padding: 0; }
+  .sidebar-nav li {
+    height: 65px;
+    display: block;
+    border-bottom: 1px solid #7d7d7d; }
+    .sidebar-nav li a {
+      display: block;
+      padding-top: 20px;
+      padding-left: 20px;
+      width: 250px;
+      color: #7d7d7d; }
+
+@media (max-width: 767px) {
+  #wrapper {
+    padding-left: 0; }
+  #sidebar-wrapper {
+    left: 0; }
+  #wrapper .active {
+    position: relative;
+    left: 250px; }
+  #wrapper .active #sidebar-wrapper {
+    left: 250px;
+    width: 250px;
+    transition: all 0.4s ease 0s; } }
