--- a/app/layout/header.html
+++ b/app/layout/header.html
@@ -1,5 +1,5 @@
 
-<nav class="navbar navbar-default" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="navbar-header">
 		<button type="button" class="navbar-toggle" ng-click="$ctrl.isNavCollapsed = !$ctrl.isNavCollapsed">
 			<span class="sr-only">Toggle navigation</span>
