--- a/app/assets/css/custom.css
+++ b/app/assets/css/custom.css
@@ -45,6 +45,13 @@
       padding-left: 20px;
       width: 250px;
       color: #7d7d7d; }
+  .sidebar-nav li:hover {
+    background-color: #ffb036;
+    border-left: 10px solid #7d7d7d;
+    transition: all 0.4s ease 0s; }
+    .sidebar-nav li:hover a {
+      color: black;
+      text-decoration: none; }
 
 @media (max-width: 767px) {
   #wrapper {
