--- a/app/assets/sass/custom.scss
+++ b/app/assets/sass/custom.scss
@@ -70,6 +70,17 @@ $dark-grey: #7d7d7d;
 			color: $dark-grey;
 		}
 	}
+
+	li:hover {
+		background-color: $primary-color;
+		border-left: 10px solid $dark-grey;
+		transition: all 0.4s ease 0s;
+
+		a {
+			color: black;
+			text-decoration: none;
+		}
+	}
 }
 
 @media (max-width:767px) {
