--- a/app/layout/sidenav.html
+++ b/app/layout/sidenav.html
@@ -1,8 +1,8 @@
 <div id="sidebar-wrapper">
     <ul class="sidebar-nav">
-        <li class="sidebar-brand"><a href="#">Home</a></li>
-        <li><a href="#">Another link</a></li>
-        <li><a href="#">Next link</a></li>
-        <li><a href="#">Last link</a></li>
+        <li class="sidebar-brand"><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Home</a></li>
+        <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Another link</a></li>
+        <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Next link</a></li>
+        <li><a href="#"> <i class="fa fa-home" aria-hidden="true"></i> Last link</a></li>
     </ul>
 </div>
