--- a/app/assets/css/custom.css
+++ b/app/assets/css/custom.css
@@ -44,12 +44,17 @@
       padding-top: 20px;
       padding-left: 20px;
       width: 250px;
+      height: 65px;
       color: #7d7d7d; }
-  .sidebar-nav li:hover {
-    background-color: #ffb036;
-    border-left: 10px solid #7d7d7d;
-    transition: all 0.4s ease 0s; }
-    .sidebar-nav li:hover a {
+    .sidebar-nav li a:hover {
+      background-color: #ffb036;
+      border-left: 10px solid #7d7d7d;
+      color: black;
+      text-decoration: none;
+      transition: all 0.4s ease 0s; }
+    .sidebar-nav li .active {
+      background-color: #ffb036;
+      border-left: 10px solid #7d7d7d;
       color: black;
       text-decoration: none; }
 
