--- a/app/assets/sass/custom.scss
+++ b/app/assets/sass/custom.scss
@@ -67,16 +67,21 @@ $dark-grey: #7d7d7d;
 			padding-top: 20px;
 			padding-left: 20px;
 			width: 250px;
+			height: 65px;
 			color: $dark-grey;
 		}
-	}
 
-	li:hover {
-		background-color: $primary-color;
-		border-left: 10px solid $dark-grey;
-		transition: all 0.4s ease 0s;
+		a:hover {
+			background-color: $primary-color;
+			border-left: 10px solid $dark-grey;
+			color: black;
+			text-decoration: none;
+			transition: all 0.4s ease 0s;
+		}
 
-		a {
+		.active {
+			background-color: $primary-color;
+			border-left: 10px solid $dark-grey;
 			color: black;
 			text-decoration: none;
 		}
