--- a/app/assets/css/custom.css
+++ b/app/assets/css/custom.css
@@ -1,3 +1,6 @@
+section {
+  padding-top: 20px; }
+
 #wrapper {
   padding-left: 250px;
   transition: all 0.4s ease 0s; }
@@ -57,6 +60,11 @@
       border-left: 10px solid #7d7d7d;
       color: black;
       text-decoration: none; }
+
+.search-input {
+  height: 50px;
+  font-size: 20px;
+  border-radius: 25px; }
 
 @media (max-width: 767px) {
   #wrapper {
