--- a/app/assets/sass/custom.scss
+++ b/app/assets/sass/custom.scss
@@ -3,15 +3,22 @@ $secondary-color: #ffffff;
 $light-grey: #e5e5e5;
 $dark-grey: #7d7d7d;
 
+$sidenav-width: 250px;
+$sidenav-width-negative: -250px;
+
+section {
+	padding-top: 20px;
+}
+
 #wrapper {
-	padding-left: 250px;
+	padding-left: $sidenav-width;
 	transition: all 0.4s ease 0s;
 }
 
 #sidebar-wrapper {
-	margin-left: -250px;
-	left: 250px;
-	width: 250px;
+	margin-left: $sidenav-width-negative;
+	left: $sidenav-width;
+	width: $sidenav-width;
 	background: $light-grey;
 	position: fixed;
 	height: 100%;
@@ -52,7 +59,7 @@ $dark-grey: #7d7d7d;
 .sidebar-nav {
 	position: absolute;
 	top: 0;
-	width: 250px;
+	width: $sidenav-width;
 	list-style: none;
 	margin: 0;
 	padding: 0;
@@ -66,7 +73,7 @@ $dark-grey: #7d7d7d;
 			display:block;
 			padding-top: 20px;
 			padding-left: 20px;
-			width: 250px;
+			width: $sidenav-width;
 			height: 65px;
 			color: $dark-grey;
 		}
@@ -88,6 +95,12 @@ $dark-grey: #7d7d7d;
 	}
 }
 
+.search-input {
+	height: 50px;
+	font-size: 20px;
+	border-radius: 25px;
+}
+
 @media (max-width:767px) {
 
     #wrapper {
@@ -101,7 +114,7 @@ $dark-grey: #7d7d7d;
     #wrapper {
     	.active {
 	  		position: relative;
-	  		left: 250px;
+	  		left: $sidenav-width;
   		}
     }
 
@@ -109,8 +122,8 @@ $dark-grey: #7d7d7d;
     	.active {
 
 	 		#sidebar-wrapper {
-		  		left: 250px;
-		  		width: 250px;
+		  		left: $sidenav-width;
+		  		width: $sidenav-width;
 		  		transition: all 0.4s ease 0s;
 		  	}
 		}
