--- a/app/assets/css/custom.css
+++ b/app/assets/css/custom.css
@@ -66,6 +66,16 @@ section {
   font-size: 20px;
   border-radius: 25px; }
 
+.table tbody tr td {
+  line-height: 3.5;
+  border-top: none; }
+
+.table tbody tr:hover {
+  background-color: #ffb036;
+  border-left: 10px solid #7d7d7d;
+  color: black;
+  transition: all 0.4s ease 0s; }
+
 @media (max-width: 767px) {
   #wrapper {
     padding-left: 0; }
