--- a/app/assets/sass/custom.scss
+++ b/app/assets/sass/custom.scss
@@ -101,6 +101,26 @@ section {
 	border-radius: 25px;
 }
 
+.table {
+	tbody {
+		tr {
+			
+
+			td {
+				line-height: 3.5;
+				border-top: none;
+			}
+		}
+
+		tr:hover {
+			background-color: $primary-color;
+			border-left: 10px solid $dark-grey;
+			color: black;
+			transition: all 0.4s ease 0s;
+		}
+	}
+}
+
 @media (max-width:767px) {
 
     #wrapper {
