changed primary color and search link name

--- a/app/assets/css/custom.css
+++ b/app/assets/css/custom.css
@@ -21,7 +21,7 @@ section {
   width: 100%; }
 
 .navbar-default {
-  background-color: #ffb036; }
+  background-color: #46BFBD; }
   .navbar-default .navbar-brand {
     color: #ffffff; }
   .navbar-default .navbar-nav li a {
@@ -50,15 +50,15 @@ section {
       height: 65px;
       color: #7d7d7d; }
     .sidebar-nav li a:hover {
-      background-color: #ffb036;
+      background-color: #46BFBD;
       border-left: 10px solid #7d7d7d;
-      color: black;
+      color: white;
       text-decoration: none;
       transition: all 0.4s ease 0s; }
     .sidebar-nav li .active {
-      background-color: #ffb036;
+      background-color: #46BFBD;
       border-left: 10px solid #7d7d7d;
-      color: black;
+      color: white;
       text-decoration: none; }
 
 .search-input {
@@ -70,7 +70,7 @@ section {
   margin-top: 20px; }
 
 .panel-default .panel-heading {
-  background-color: #ffb036;
+  background-color: #46BFBD;
   color: #ffffff; }
 
 .table tbody tr td {
@@ -78,8 +78,8 @@ section {
   border-top: none; }
 
 .table tbody tr:hover {
-  background-color: #ffb036;
-  border-left: 10px solid #7d7d7d;
+  background-color: #e5e5e5;
+  border-left: 10px solid #46BFBD;
   color: black;
   transition: all 0.4s ease 0s; }
 
