--- a/app/assets/sass/custom.scss
+++ b/app/assets/sass/custom.scss
@@ -101,8 +101,41 @@ section {
 	border-radius: 25px;
 }
 
-.panel {
-	margin-top: 20px;
+.btn-default {
+	background-color: white;
+	color: $primary-color;
+	border-color: $primary-color;
+}
+
+.btn-default:hover {
+	background-color: $primary-color;
+	color: white;
+	border-color: $primary-color;
+	transition: all 0.4s ease 0s;
+}
+
+.btn-default:active:hover {
+	background-color: $primary-color;
+	color: white;
+	border-color: $primary-color;
+	transition: all 0.4s ease 0s;
+}
+
+.btn-default:focus {
+	background-color: $primary-color;
+	color: white;
+	border-color: $primary-color;
+	transition: all 0.4s ease 0s;
+}
+
+.add-ad-btn {
+	margin-top: 10px;
+	margin-bottom: 5px;
+}
+
+.submit-add-ad-btn {
+	background-color: $primary-color;
+	color: white;
 }
 
 .panel-default {
@@ -128,11 +161,6 @@ section {
 			transition: all 0.4s ease 0s;
 		}
 	}
-}
-
-.btn-default {
-	background-color: $primary-color;
-	color: white;
 }
 
 @media (max-width:767px) {
