--- a/app/layout/sidenav.html
+++ b/app/layout/sidenav.html
@@ -1,7 +1,6 @@
 <div id="sidebar-wrapper">
     <ul class="sidebar-nav">
-        <li><a ui-sref="app.home" ui-sref-active="active"><i class="fa fa-search" aria-hidden="true"></i> Search Filter</a></li>
-        <li><a ui-sref="app.add-advertisement" ui-sref-active="active"><i class="fa fa-plus" aria-hidden="true"></i> Add Advertisement</a></li>
+        <li><a ui-sref="app.home" ui-sref-active="active"><i class="fa fa-list" aria-hidden="true"></i> Advertisement list</a></li>
         <li><a ui-sref="app.graphs" ui-sref-active="active"><i class="fa fa-bar-chart" aria-hidden="true"></i> Charts & Graphs</a></li>
         <li><a href="#"><i class="fa fa-home" aria-hidden="true"></i> Last link</a></li>
     </ul>
