--- a/app/assets/sass/custom.scss
+++ b/app/assets/sass/custom.scss
@@ -128,6 +128,11 @@ section {
 	transition: all 0.4s ease 0s;
 }
 
+.modal-header {
+	background-color: $primary-color;
+	color: white;
+}
+
 .add-ad-btn {
 	margin-top: 10px;
 	margin-bottom: 5px;
